# SGTK

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile.sh  index.html  manual.html  rna_scaffolder.py  scaffolder.vpp  sgtk.py  visualize_scaffold_graph.py
scaffolder/: CMakeLists.txt  ConigGraph.cpp  ConigGraph.h  Graph.cpp  Graph.h  GraphControl.cpp  GraphControl.h  GraphView.cpp  GraphView.h  ReadsAlignment.cpp  ReadsAlignment.h  log.properties  main.cpp  mainAddBothPath.cpp  mainAddInfoToGraph.cpp  mainBuildGraph.cpp  mainFilter.cpp  mainMergeContigs.cpp  mainMergeGraph.cpp  mainSplitFastqFiles.cpp  manual.html  rna_scaffolder.py  visualize_scaffold_graph.py
scaffolder/ContigGraph/: ConigGraph.cpp  ConigGraph.h  ContigGraph.cpp  ContigGraph.h  ContigGraphPrinter.cpp  ContigGraphPrinter.h  InteractiveFilter.cpp  InteractiveFilter.h  Serialization.cpp  Serialization.h
scaffolder/GenTests/: SplitReadsTest.cpp  SplitReadsTest.h
scaffolder/GraphBuilder/: DNAPairReadGraphBuilder.cpp  DNAPairReadGraphBuilder.h  GraphBuilder.cpp  GraphBuilder.h  PairReadGraphBuilder.cpp  PairReadGraphBuilder.h  RNAPairReadGraphBuilder.cpp  RNAPairReadGraphBuilder.h  RNASplitReadGraphBuilder.cpp  RNASplitReadGraphBuilder.h  ReferenceGraphBuilder.cpp  ReferenceGraphBuilder.h
scaffolder/ReadsSplitter/: ReadsSplitter.cpp  ReadsSplitter.h  ReadsSplitter50.cpp  ReadsSplitter50.h  SplitterByUnmappedEnd.cpp  SplitterByUnmappedEnd.h
scaffolder/SamFileWriter/: ContigMerger.cpp  ContigMerger.h  SamFileWriteEdge.cpp  SamFileWriteEdge.h  SamFileWriter.cpp  SamFileWriter.h
scaffolder/Scaffolder/: ScafSimplePath.cpp  ScafSimplePath.h
scaffolder/Tools/: FastaTools.cpp  FastaTools.h  FastaToolsIn.cpp  FastaToolsIn.h  FastaToolsOut.cpp  FastaToolsOut.h  ReadsSplitter.cpp  ReadsSplitter.h  SeqanUtils.cpp  SeqanUtils.h  Utils.cpp  Utils.h  WorkWithOtherTools.cpp  WorkWithOtherTools.h
scaffolder/UI/: findAreaScript.js  genealignmentb.js  genescaffoldgraph.js  handleAlongChromosomes.js  handleDiffInLibs.js  html_saver.py  light.css  mainPage.html  scaffoldgraph.js  scaffolds.js  script.js
scaffolder/UI/scripts/: defaultWeight.js  findAreaScript.js  freeLayout.js  habdleScaffolds.js  handleAlongChromosomes.js  handleAmbiguous.js  handleDiffInLibs.js  handleScaffolds.js  light.css  scaffoldgraph.js  script.js  search.js  showListScript.js  zoomChoose.js
scaffolder/resources/: MG1655-K12.first10K.fasta  scaf.info
scaffolder/resources/filterTest/: merge1_2_lib_graph.gr  set_weight_graph.gr  simple_adapter_graph.gr
scaffolder/scripts/: run_build.sh
scaffolder/src/: CMakeLists.txt  GraphControl.cpp  GraphControl.h  README.md  log.properties  mainAddBothPath.cpp  mainAddInfoToGraph.cpp  mainBuildGraph.cpp  mainFilter.cpp  mainFindExon.cpp  mainMergeContigs.cpp  mainMergeGraph.cpp  mainSplitFastqFiles.cpp  mainSplitReads.cpp
scaffolder/src/Builder/: CMakeLists.txt  GraphControl.cpp  GraphControl.h  README.md
scaffolder/src/ContigGraph/: CMakeLists.txt  ContigGraph.cpp  ContigGraph.h  GraphUtils.cpp  GraphUtils.h  InteractiveFilter.cpp  InteractiveFilter.h  README.md  Serialization.cpp
scaffolder/src/ContigMerger/: CMakeLists.txt  ContigMerger.cpp  ContigMerger.h  README.md
scaffolder/src/Filter/: CMakeLists.txt  ContigGraphPrinter.cpp  ContigGraphPrinter.h  GraphWithFilter.cpp  GraphWithFilter.h  InteractiveFilter.cpp  InteractiveFilter.h  README.md
scaffolder/src/FindExon/: CMakeLists.txt  ExonInfo.cpp  ExonInfo.h  ExonsInfo.cpp  ExonsInfo.h
scaffolder/src/GenTests/: SplitReadsTest.cpp  SplitReadsTest.h
scaffolder/src/GraphBuilder/: PairReadGraphBuilder.h  RNAPairReadGraphBuilder.cpp  RNASplitReadGraphBuilder.cpp  RNASplitReadGraphBuilder.h  ReferenceGraphBuilder.cpp  ReferenceGraphBuilder.h
scaffolder/src/Logger/: format.cc  log_writers.hpp  logger.hpp  logger_impl.cpp  path_helper.cpp  path_helper.hpp
scaffolder/src/ReadsSplitter/: CMakeLists.txt  ReadsSplitter.cpp  ReadsSplitter50.cpp  ReadsSplitter50.h  SplitterByUnmappedEnd.cpp
scaffolder/src/Scaffolder/: ScafSimplePath.cpp  ScafSimplePath.h
scaffolder/src/Tools/: SeqanUtils.h  SystemTools.cpp  SystemTools.h  Utils.cpp  Utils.h  WorkWithOtherTools.cpp  WorkWithOtherTools.h
scaffolder/tests/: CMakeLists.txt
scaffolder/tests/BuilderTests/: CMakeLists.txt  builderTest.cpp
scaffolder/tests/ContigGraphTests/: CMakeLists.txt  contigGraphTest.cpp
scaffolder/tests/FiltersTest/: CMakeLists.txt  contigGraphTest.cpp  filterTest.cpp
scaffolder/tests/GenTests/: SplitReadsTest.h
scaffolder/tests/basic_tests/: CMakeLists.txt  basic_check.cpp
src/: CMakeLists.txt  log.properties  mainAddBothPath.cpp  mainAddInfoToGraph.cpp  mainBuildGraph.cpp  mainFilter.cpp  mainMergeGraph.cpp  mainSplitReads.cpp
src/Builder/: CMakeLists.txt  GraphControl.cpp  GraphControl.h  README.md
src/Builder/ContigGraph/: ContigGraph.cpp  ContigGraph.h
src/Builder/GraphBuilder/: ConnectionGraphBuilder.cpp  ConnectionGraphBuilder.h  DNAMatePairReadsGraphBuilder.cpp  DNAPairReadGraphBuilder.h  DNAPairReadsGraphBuilder.cpp  DNAPairReadsGraphBuilder.h  FASTGGraphBuilder.cpp  FASTGGraphBuilder.h  GFA2GraphBuilder.cpp  GFA2GraphBuilder.h  GFAGraphBuilder.cpp  GFAGraphBuilder.h  GraphBuilder.cpp  GraphBuilder.h  LongGraphBuilder.cpp  LongGraphBuilder.h  PairReadGraphBuilder.cpp  PairReadGraphBuilder.h  README.md  RNASplitGraphBuilder.cpp  RNASplitGraphBuilder.h  ReferenceGraphBuilder.h
src/Filter/: CMakeLists.txt  README.md
src/Filter/AligInfo/: GeneAnnotationAns.cpp  GeneAnnotationContigs.cpp  GeneFinder.h  InfoAboutContigsAlig.cpp  InfoAboutContigsAlig.h
src/Filter/CommandParsers/: Manager.cpp  Manager.h  State.h
src/Filter/ContigGraph/: ContigGraph.cpp  ContigGraph.h  SeqanUtils.cpp  SeqanUtils.h
src/Filter/Scaffolder/: Rule.cpp  Rule.h  RuleBigDifInWeight.cpp  RuleDel30.cpp  (+11 more)
src/Logger/: CMakeLists.txt  perfcounter.hpp  verify.hpp
src/ReadsSplitter/: CMakeLists.txt  ReadsSplitter.h  ReadsSplitter50.h  SplitterByUnmappedEnd.h
tests/ContigGraphTests/: CMakeLists.txt
tests/FiltersTest/: CMakeLists.txt  contigGraphTest.cpp
(+502 files in other folders)
