include_directories(.)

set(SOURCE_FILES
        CommandParsers/Manager.h
        CommandParsers/Commands/Command.h
        CommandParsers/State.h
        CommandParsers/Commands/CommandUploadGraph/CommandUploadGraph.h
        CommandParsers/Commands/CommandFilter/CommandMinContig.h
        CommandParsers/Commands/CommandFilter/CommandMinEdgeWeight.h
        CommandParsers/Commands/CommandFilter/CommandSetIgnore.h
        CommandParsers/Commands/CommandScaffold.h
        CommandParsers/Commands/CommandPrint.h
        CommandParsers/Commands/CommandFilter/CommandMergeLib.h
        CommandParsers/Commands/CommandSetBamFile.h
        CommandParsers/Commands/CommandSetExonBlockFile.h
        CommandParsers/Commands/CommandDelCoord.h
        Scaffolder/Scaffolds.h
        Scaffolder/ScaffolderPipeline.h
        CommandParsers/Commands/CommandFilter/CommandSetIgnoreEdge.h
        CommandParsers/Commands/CommandUploadGraph/CommandUploadScaffoldsGraph.h
        CommandParsers/Commands/CommandUploadGraph/CommandAddInfoToGraph.h
        CommandParsers/Commands/CommandUploadGraph/CommandAddBothPath.h
        Scaffolder/ScaffoldStrategy.h
        Scaffolder/ScaffoldStrategyUniqueConnection.h
        AligInfo/InfoAboutContigsAlig.h
        Statistics/CntRightConnectionStatistic.h
        CommandParsers/Commands/CommandStatistic/CommandCorrectConnectionStatistic.h
        Statistics/Statistic.h
        Statistics/WeightStatistic.h
        CommandParsers/Commands/CommandStatistic/CommandWeightStatistic.h
        Statistics/DifStatistic.h
        CommandParsers/Commands/CommandStatistic/CommandDifStatistic.h
        Statistics/WeightDifStatistic.h
        CommandParsers/Commands/CommandStatistic/CommandWeightDifStatistic.h
        Statistics/TwoLibStatistic.h
        CommandParsers/Commands/CommandStatistic/CommandTwoLibStatistic.h
        Statistics/WeightHistogram.h
        CommandParsers/Commands/CommandStatistic/CommandHistogram.h
        CommandParsers/Commands/CommandStatistic/CommandTwoCompStatistic.h
        Statistics/TwoCompStatistic.h
        Scaffolder/Rule.h
        Scaffolder/RuleBigDifInWeight.h
        Scaffolder/RuleInOneLine.h
        Scaffolder/RuleDelWrongCoonection.h
        CommandParsers/Commands/CommandSetCoordFile.h
        Statistics/ClusterStatistic.h
        CommandParsers/Commands/CommandStatistic/CommandClusterStatistic.h
        Scaffolder/RuleDelSmallCycle.h
        Scaffolder/RuleDel30.h
        Scaffolder/ScaffoldStrategyOneLine.h
        ContigGraph/ContigGraph.h
        ContigGraph/SeqanUtils.h
        Scaffolder/RuleDelSmallEdges.h
        Scaffolder/RuleExonBlocks.h
        CommandParsers/Commands/CommandStatistic/CommandWrongRightStatistic.h
        AligInfo/GeneFinder.h
        AligInfo/GeneAnnotationAns.h
        Statistics/StrandStatistic.h
        CommandParsers/Commands/CommandStatistic/CommandStrandStatistic.h
        AligInfo/GeneAnnotationContigs.h

        CommandParsers/Manager.cpp
        CommandParsers/Commands/CommandUploadGraph/CommandUploadGraph.cpp
        CommandParsers/Commands/CommandFilter/CommandMinContig.cpp
        CommandParsers/Commands/CommandFilter/CommandMinEdgeWeight.cpp
        CommandParsers/Commands/CommandFilter/CommandSetIgnore.cpp
        CommandParsers/Commands/CommandScaffold.cpp
        CommandParsers/Commands/CommandPrint.cpp
        CommandParsers/Commands/CommandFilter/CommandMergeLib.cpp
        Scaffolder/Scaffolds.cpp
        Scaffolder/ScaffolderPipeline.cpp
        CommandParsers/Commands/CommandFilter/CommandSetIgnoreEdge.cpp
        CommandParsers/Commands/CommandUploadGraph/CommandUploadScaffoldsGraph.cpp
        CommandParsers/Commands/CommandUploadGraph/CommandAddInfoToGraph.cpp
        CommandParsers/Commands/CommandUploadGraph/CommandAddBothPath.cpp
        Scaffolder/ScaffoldStrategy.cpp
        Scaffolder/ScaffoldStrategyUniqueConnection.cpp
        AligInfo/InfoAboutContigsAlig.cpp
        Statistics/CntRightConnectionStatistic.cpp
        CommandParsers/Commands/CommandStatistic/CommandCorrectConnectionStatistic.cpp
        Statistics/Statistic.cpp
        Statistics/WeightStatistic.cpp
        CommandParsers/Commands/CommandStatistic/CommandWeightStatistic.cpp
        Statistics/DifStatistic.cpp
        CommandParsers/Commands/CommandStatistic/CommandDifStatistic.cpp
        Statistics/WeightDifStatistic.cpp
        CommandParsers/Commands/CommandStatistic/CommandWeightDifStatistic.cpp
        Statistics/TwoLibStatistic.cpp
        CommandParsers/Commands/CommandStatistic/CommandTwoLibStatistic.cpp
        Statistics/WeightHistogram.cpp
        CommandParsers/Commands/CommandStatistic/CommandHistogram.cpp
        CommandParsers/Commands/CommandStatistic/CommandTwoCompStatistic.cpp
        Statistics/TwoCompStatistic.cpp
        Scaffolder/Rule.cpp
        Scaffolder/RuleBigDifInWeight.cpp
        Scaffolder/RuleInOneLine.cpp
        Scaffolder/RuleDelWrongCoonection.cpp
        Statistics/ClusterStatistic.cpp
        CommandParsers/Commands/CommandStatistic/CommandClusterStatistic.cpp
        Scaffolder/RuleDelSmallCycle.cpp
        Scaffolder/RuleDel30.cpp
        Scaffolder/ScaffoldStrategyOneLine.cpp
        ContigGraph/ContigGraph.cpp
        ContigGraph/SeqanUtils.cpp
        Scaffolder/RuleDelSmallEdges.cpp
        Scaffolder/RuleExonBlocks.cpp
        CommandParsers/Commands/CommandStatistic/CommandWrongRightStatistic.cpp
        AligInfo/GeneFinder.cpp
        AligInfo/GeneAnnotationAns.cpp
        Statistics/StrandStatistic.cpp
        AligInfo/GeneAnnotationContigs.cpp)

add_library(filter_lib ${SOURCE_FILES})